Kubernetes/rundeck/3.rundeckpro-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rundeckpro-cluster
  namespace: run2596
  labels:
    app: rundeckpro-cluster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rundeckpro-cluster
  template:
    metadata:
      labels:
        app: rundeckpro-cluster
    spec:
      containers:
      - name: rundeckpro
        image: rundeckpro/enterprise:5.5.0
        # volumeMounts:
        #  - mountPath: /home/rundeck/server/config/realm.properties
        #    name: realm
        #    subPath: realm.properties
        ports:
        - containerPort: 4440
        readinessProbe:
          tcpSocket:
            port: 4440
          initialDelaySeconds: 30
          periodSeconds: 15
          failureThreshold: 10
          successThreshold: 3
        resources:
          requests:
            cpu: "0"
          limits:
            memory: '2Gi'
            cpu: "2"
            ephemeral-storage: "4Gi"
      # volumes:
      # - name: realm
      #   secret:
      #     secretName: realm-properties
      #     items:
      #     - key: realm.properties
      #       path: realm.properties
